Add another Fonctionality

--- a/index2.html
+++ b/index2.html
@@ -11,14 +11,14 @@
         href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900"
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Concert+One:regular" rel="stylesheet" />
-
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css'/>
 </head>
 
 <body>
 
-    <header class="header header-bg-5">
-        <nav class="navbar ">
-            <div class="navbar-brand">
+    <header class="header header-bg-10">
+        <nav class="navbar">
+            <div class="navbar-brand ">
                 <a href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         width="120" height="30" viewBox="0 0 173 46">
                         <image id="CSS" width="173" height="46"
@@ -27,16 +27,26 @@
                 </a>
             </div>
 
+            <div class="drop-menu">
+                <a href="#">
+                    <span class="bt-menu"><i class="fas fa-bars"></i></span>
+                    <span class="text">Parcous<i class="fas fa-caret-down"></i> </span>
+                </a>
+            </div>
+            <div class="search-bar">
+                <form action="" method="post">
+                    <input class="search-bar-input" type="text">
+                </form>
+            </div>
             <ul class="navbar-menu">
                 <li class="navbar-item"><a href="#" class="navbar-link">Home</a></li>
                 <li class="navbar-item"><a href="#" class="navbar-link">About</a></li>
                 <li class="navbar-item"><a href="#" class="navbar-link">Blog</a></li>
                 <li class="navbar-item"><a href="#" class="navbar-link">Contact</a></li>
-                <li class="navbar-item"><a href="#" class="navbar-link">Contact</a></li>
             </ul>
         </nav>
-
     </header>
+
 
 </body>
 
